Update code to use real certificates, even though the hostname might not match

--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -1,8 +1,8 @@
 listener 8883 0.0.0.0
 password_file /mosquitto/mosquitto.passwd
 allow_anonymous false
-cafile /mosquitto/tls/ca.crt
+capath /etc/ssl/certs
 certfile /mosquitto/tls/broker.crt
 keyfile /mosquitto/tls/broker.key
 persistence true
-persistence_location /mosquitto/data/
+persistence_location /mosquitto/data
